# python-project-50

./: .gitignore  Makefile  Pipfile  README.md  coverage.xml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: lint.yml
gendiff/: __init__.py  diff_generator.py  diffgenerator.py  file-parser.py  file_parser.py  fileparser.py  gendiff.py  json.py  plain.py  stylish.py
gendiff/formatters/: get_format.py  json.py  plain.py  stylish.py
scripts/: gendiff.py  in_point.py
tests/: test-json-identical.json  test-json-one-empty.json  test-plain-one-file-empty  test-stylish-identical  test-stylish-one-file-empty  test_generate_diff.py
tests/fixtures/: test-json-diff.json
